--- a/SampleWebBlog/Views/Home/Registrasi.cshtml
+++ b/SampleWebBlog/Views/Home/Registrasi.cshtml
@@ -4,5 +4,6 @@
 
 <h2>Registrasi</h2>
 
-<p>Selamat datang di halaman Registrasi Pengguna</p>
+<p>Selamat datang @ViewBag.Nama di halaman Registrasi Pengguna</p>
+<p>Email anda aladah : @ViewBag.Email</p>
 
