--- a/SampleWebBlog/Views/Home/Registrasi.cshtml
+++ b/SampleWebBlog/Views/Home/Registrasi.cshtml
@@ -5,5 +5,5 @@
 <h2>Registrasi</h2>
 
 <p>Selamat datang @ViewBag.Nama di halaman Registrasi Pengguna</p>
-<p>Email anda aladah : @ViewBag.Email</p>
+<p>Email anda adalah : @ViewBag.Email</p>
 
