--- a/SampleWebBlog/Views/Home/Registrasi.cshtml
+++ b/SampleWebBlog/Views/Home/Registrasi.cshtml
@@ -14,7 +14,19 @@
     }
 </ul>
 
-<form method="get" action="">
-
+<form method="get" action="@Url.Action("FormRegistrasi","Home")">
+    <div class="form-group">
+        <label for="firstname">Firstname:</label>
+        <input type="text" class="form-control" name="firstname" />
+    </div>
+    <div class="form-group">
+        <label for="lastname">Lastname:</label>
+        <input type="text" class="form-control" name="lastname" />
+    </div>
+    <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" name="email" />
+    </div>
+    <button type="submit" class="btn btn-success">Submit</button>
 </form>
 
