--- a/SampleWebBlog/Views/Home/Registrasi.cshtml
+++ b/SampleWebBlog/Views/Home/Registrasi.cshtml
@@ -14,7 +14,7 @@
     }
 </ul>
 
-<form method="get" action="@Url.Action("FormRegistrasi","Home")">
+<form method="POST" action="@Url.Action("FormRegistrasi","Home")">
     <div class="form-group">
         <label for="firstname">Firstname:</label>
         <input type="text" class="form-control" name="firstname" />
