--- a/SampleWebBlog/Views/Mahasiswa/Edit.cshtml
+++ b/SampleWebBlog/Views/Mahasiswa/Edit.cshtml
@@ -16,7 +16,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Nim, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nim, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Nim, new { htmlAttributes = new { @class = "form-control", @readonly="readonly"} })
                 @Html.ValidationMessageFor(model => model.Nim, "", new { @class = "text-danger" })
             </div>
         </div>
